# src/main/java/com/sii/catas/model/BussinessRules.java
@@ -1,0 +1,6 @@
+package com.sii.catas.model;
+
+import java.util.List;
+
+public record BussinessRules(List<String> forbiddenOptions, List<String> prefferedOptions) {
+}
