# src/main/java/com/sii/catas/model/OkapiContextParameter.java
@@ -1,0 +1,4 @@
+package com.sii.catas.model;
+
+public record OkapiContextParameter (String pdk, String country, String brand, String okapiModel, String okapiType, String language){
+}
